# nyxclaw

./: .dockerignore  .env.example  .gitignore  AUDIO_PIPELINE.md  BUGS.md  CLAUDE.md  CLIENT_IMPLEMENTATION_SPEC.md  Dockerfile  GEMINI_INTEGRATION_GUIDE.md  HANDOVER-filler-cancel-audio.md  LICENSE  README.md  SETUP_LOG.md  SPECIFICATION.md  STT_TTS_ONNX_REDESIGN.md  STT_TTS_PIPELINE_HANDOFF.md  TODO-pipeline-refactor.md  app.json  azuredeploy.json  cloudformation.yaml  docker-compose.yml  install.sh  openclawd_integration.md  pyproject.toml  test.html
.github/workflows/: docker-publish.yml
claw_patches/openclaw/: README.md  patch.ps1  patch.sh
claw_patches/openclaw/src/gateway/: avatar-http.ts
claw_patches/zeroclaw/: README.md  patch.ps1  patch.sh  upgrade_to_zeroclaw_0.6.9.md
claw_patches/zeroclaw/src/agent/: agent.rs  prompt.rs
claw_patches/zeroclaw/src/channels/: nyxclaw.rs
claw_patches/zeroclaw/src/providers/: openai.rs  traits.rs
data/: auth_store.json  knowledge.md
docs/: CLOUDFLARE_TUNNEL_PLAN.md  INTENT_CLASSIFIER_PLAN.md  SECURITY_GAP_ANALYSIS.md  openclaw_patch_plan.md  research_rich_content_patterns.md  rich_content_flow.md  rich_content_flow.mmd
scripts/: debug_config.py  debug_gemini_connect.py  debug_gemini_session.py  debug_types.py  simple_gemini_test.py  test_gemini_audio.py  test_gemini_simulation.py  test_gemini_transcript.py  test_ws.py
src/: main.py
src/agents/: __init__.py  base_agent.py  remote_agent.py
src/agents/gemini/: __init__.py  gemini_settings.py  sample_agent.py
src/agents/openai/: __init__.py  openai_settings.py  sample_agent.py
src/agents/openai/realtime_client/: __init__.py  api.py  client.py  conversation.py  event_handler.py  utils.py
src/agents/openclaw/: __init__.py  openclaw_settings.py  sample_agent.py
src/agents/zeroclaw/: __init__.py  sample_agent.py  zeroclaw_settings.py
src/auth/: __init__.py  dependencies.py  device_verifier.py  middleware.py  models.py  rate_limiter.py  setup_code_service.py  store.py  token_manager.py  ws_auth.py
src/backend/: __init__.py  base_agent.py
src/backend/openclaw/: __init__.py  backend.py  settings.py
src/backend/zeroclaw/: __init__.py  backend.py  settings.py
src/chat/: __init__.py  chat_session.py  connection_manager.py
src/core/: __init__.py  logger.py  settings.py
src/routers/: __init__.py  chat_router.py
src/services/: __init__.py  agent_service.py  conversation_store.py  knowledge_service.py  stt_service.py  tts_service.py  tunnel_service.py  wav2arkit_service.py
src/utils/: ogp.py  thumbnail.py
src/voice/: __init__.py
src/voice/openai_realtime/: __init__.py  backend.py  settings.py
src/wav2arkit/: __init__.py  inference.py  utils.py
tests/: conftest.py  test_audio_pipeline.py  test_auth_admin_guards.py  test_auth_challenge_context.py  test_auth_device_approval.py  test_auth_legacy_endpoint.py  test_auth_pairing_store.py  test_auth_rate_limit.py  test_auth_revocation.py  test_auth_server_phase2.py  test_auth_session_limits.py  test_auth_setup_code_service.py  test_auth_signature_flow.py  test_auth_store.py  test_auth_tofu_policy.py  test_bargein_playback.py  test_chat_router_conversations.py  test_conversation_store.py  test_nyx_ws.ps1  test_openai_tts_worker.py  test_pairing_router.py  test_rich_content.py  test_setup_code_service.py  test_thumbnail.py  test_ws.ps1  test_ws.py  test_zeroclaw_url.py
