[project]
name = "avatar-chat-server"
version = "1.0.0"
description = "Real-time voice-to-avatar interaction server combining OpenAI Realtime API with Wav2Arkit model"
readme = "README.md"
requires-python = "==3.10.*"
license = { text = "MIT" }

dependencies = [
    # FastAPI Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",

    # WebSocket support (for OpenAI Realtime client)
    "websockets>=12.0",

    # Performance - Fast JSON serialization
    "orjson>=3.9.0",

    # Audio processing
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",

    # Environment variables
    "python-dotenv>=1.0.0",

    # ONNX Runtime provider selection
    # - Windows: prefer DirectML EP (iGPU/dGPU acceleration)
    # - Other OS: keep default CPU runtime
    "onnxruntime-directml>=1.23.0; platform_system == 'Windows'",
    "onnxruntime>=1.23.2; platform_system != 'Windows'",

    # AI Agent dependencies
    "google-genai>=1.0.0",  # Google GenAI SDK for Gemini Live API
    "httpx>=0.27.0",  # Async HTTP client for OpenClaw agent (SSE streaming)
    
    
]

[project.optional-dependencies]
# Optional local voice stack (STT + VAD + TTS).
# Install with: uv sync --extra local_voice
local_voice = [
    # Local voice pipeline dependencies
    # silero-vad omitted: depends on torch (~2GB). We load silero_vad.onnx
    # directly via onnxruntime using _SileroVADIterator in stt_service.py.
    # faster-whisper uses CTranslate2 (not ONNX) for STT inference.
    "piper-tts>=1.2.0",
    "faster-whisper>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ==================== Ruff Configuration ====================
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file (needed for warnings filter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # Within an except clause, raise exceptions with `raise ... from err`
    "ARG001", # Unused function argument (common in event handlers)
    "ARG002", # Unused method argument
    "RUF006", # Store reference to asyncio.create_task (fire-and-forget is intentional)
    "RUF012", # Mutable class attributes should use ClassVar (constants are fine)
    "SIM105", # contextlib.suppress suggestion (explicit try/except is clearer)
    "SIM108", # Ternary operator suggestion (multi-line if/else is clearer)
    "SIM102", # Nested if statements (sometimes clearer for readability)
    "W293",   # Blank line contains whitespace (in docstrings)
    "RUF022", # __all__ not sorted (grouping by category is intentional)
    "PTH123", # Path.open() suggestion (open() is fine)
    "RUF013", # Implicit Optional type hint
    "TC002",  # Move import into type-checking block
    "B028",   # No stacklevel in warnings.warn
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "agents", "routers", "auth", "wav2arkit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==================== Ty Configuration ====================
[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Disable rules that produce false positives with pydantic-settings and third-party libs
missing-argument = "ignore"            # pydantic-settings loads from env vars
invalid-argument-type = "ignore"       # Third-party SDK type stub issues
unresolved-import = "ignore"           # websockets type stub issues
unresolved-attribute = "ignore"        # Third-party module attributes
not-iterable = "ignore"                # websockets async iteration
possibly-missing-attribute = "ignore"  # Optional types with None checks
not-subscriptable = "ignore"           # ONNX tensor subscripting
invalid-parameter-default = "ignore"   # Optional params with None defaults
